# rdsss

./: README.md  setup.cfg
src/: rdssslib.py
