[metadata]
name = ssslib
version = 0.1-dev

[options]
package_dir =
  = src
packages = find:
install_requires = 
  click
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
  make_rdssslib = rdssslib:makelib
  update_rdssslib = rdssslib:updatelib
  run_rdsss = rdssslib:runsss
